--- a/example/package.json
+++ b/example/package.json
@@ -4,9 +4,18 @@
   "description": "No description",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "postinstall": "rm -rf node_modules/react-native-suggester/{.git,node_modules,example}"
+  },
   "dependencies": {
     "expo": "^32.0.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-suggester": "./.."
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "3.1.3",
+    "babel-preset-expo": "5.0.0",
+    "babel-core": "6.26.3"
   }
 }
