--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
     "@types/react": "^16.7.17",
     "@types/react-native": "^0.57.19",
     "prettier": "1.15.3",
+    "react": "^16.7.0",
+    "react-native": "^0.57.8",
     "tslint": "5.12.0",
     "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.2",
-    "react": "^16.7.0",
-    "react-native": "^0.57.8"
+    "typescript": "3.2.2"
   },
   "dependencies": {
-    "fuse.js": "3.3.0"
+    "fuse.js": "3.3.0",
+    "prop-types": "15.6.2"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf lib/ && tsc",
     "format": "prettier --write \"src/**/*.tsx\" \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "yarn build",
