--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "TextInput",
     "autocompletion"
   ],
-  "main": "lib/index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "types": "lib/index.d.ts",
   "author": "Xavier Carpentier <xcapetir@gmail.com> (https://xaviercarpentier.com/)",
   "license": "MIT",
@@ -20,14 +20,20 @@
     "lib/**/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/react": "^16.7.17",
     "@types/react-native": "^0.57.19",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-preset-expo": "^5.0.0",
     "prettier": "1.15.3",
-    "react": "^16.7.0",
-    "react-native": "^0.57.8",
     "tslint": "5.12.0",
     "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.2"
+    "typescript": "3.2.2",
+    "json": "^9.0.6",
+    "expo": "^32.0.0",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "dependencies": {
     "fuse.js": "3.3.0",
@@ -38,13 +44,10 @@
     "react-native": "*"
   },
   "scripts": {
+    "dev": "json -I -f package.json -e 'this.main=\"node_modules/expo/AppEntry.js\"' && expo r -c",
     "build": "rm -rf lib/ && tsc",
-    "format": "prettier --write \"src/**/*.tsx\" \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare": "yarn build",
-    "prepublishOnly": "yarn lint",
-    "preversion": "yarn lint",
-    "version": "yarn format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "prepublish": "yarn lint && yarn build && json -I -f package.json -e 'this.main=\"lib/index.js\"'",
+    "postpublish": "json -I -f package.json -e 'this.main=\"node_modules/expo/AppEntry.js\"'"
   }
 }
