--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-suggester",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "React-Native package to decorate TextInput and get suggestions with good UX",
   "repository": {
     "type": "git",
@@ -50,7 +50,6 @@
     "build": "rm -rf lib/ && tsc",
     "lint": "tslint -p tsconfig.json",
     "prepublishOnly": "yarn lint && yarn build && yarn config:npm",
-    "postpublish": "yarn config:dev",
-    "postinstall": "yarn config:dev"
+    "postpublish": "yarn config:dev"
   }
 }
