--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "@types/react-native": "^0.57.19",
     "babel-core": "^7.0.0-bridge.0",
     "babel-preset-expo": "^5.0.0",
-    "expo": "^32.0.0",
+    "expo": "^34.0.3",
     "json": "^9.0.6",
     "prettier": "1.15.3",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "tslint": "5.12.0",
     "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.2"
+    "typescript": "3.2.2",
+    "expo-constants": "6.0.0"
   },
   "dependencies": {
     "fuse.js": "3.3.0",
@@ -42,7 +43,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "expo-constants": "*"
   },
   "scripts": {
     "config:dev": "json -I -f package.json -e 'this.main=\"node_modules/expo/AppEntry.js\"'",
